# ncnn-android-yolov8-pose

./: build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/yolov8ncnn/: MainActivity.java
app/src/main/jni/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
